@@ -57,6 +57,8 @@ $temporaryColumns = array(
         'label' => 'LLL:EXT:' . AGENCY_EXT . '/locallang_db.xlf:fe_users.date_of_birth',
         'config' => array(
             'type' => 'input',
+            'renderType' => 'inputDateTime',
+            'dbType' => 'date',
             'size' => '10',
             'max' => '20',
             'eval' => 'date',
