@@ -3387,6 +3387,7 @@ The user is informed that a message has been sent to the email address and that 
     </div>
 
     <div class="viewInput divInputSubmit">
+        <input type="submit" name="submit" value="###LABEL_BUTTON_ENTER###">
         <input type="hidden" name="logintype" value="login">
         <input type="hidden" name="pid" value="###THE_PID###">
         <input type="hidden" name="redirect_url" value="">
@@ -3458,7 +3459,6 @@ The user is informed that a message has been sent to the email address and that 
         <input type="hidden" name="pid" value="###THE_PID###">
         <input type="hidden" name="redirect_url" value="">
     </div>
-
 </form>
 <!-- ###TEMPLATE_SETFIXED_OK_ENTER### end-->
 
